--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brain Game 2 Speaking Test</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Front:  -->
 </head>
 <body>
-    
+
+    <!-- Scripts -->
+    <script src="./libs/anime/anime.min.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
