--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brain Game 2 Speaking Test</title>
     <link rel="stylesheet" href="./css/style.css">
-    <!-- Front:  -->
+    <!-- Front: Roboto -->
 </head>
 <body>
 
