--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brain Game 2 Speaking Test</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <!-- Front: Roboto -->
+    <title>Brain Game 2 Speaking Test</title>
 </head>
+
 <body>
     
     <!-- Scripts -->
     <script src="./libs/anime/anime.min.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
